tests/files/type_checker_tests/should_fail/157.cmdr
//Should fail if operation setting an uninitialized variable
--x;
